<resources>
    <string name="app_name">TransferMe</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="et_from">Откуда</string>
    <string name="et_to">Куда</string>
    <string name="et_people_count">Пасажиры</string>
    <string name="bt_search">Найти</string>

    <string name="fr_title_home">Поиск трансфера</string>
    <string name="fr_title_setting">Настройки</string>
    <!--<string name="fr_title_autocomplit">Найти</string>-->


</resources>
