<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ru.polyakov.transferme.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="ru.polyakov.transferme.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="ru.polyakov.transferme.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/autoComplitFragment"
        android:name="ru.polyakov.transferme.ui.autocomplit.AutoComplitFragment"
        android:label="Поиск"
        tools:layout="@layout/auto_complit_fragment" >
        <action
            android:id="@+id/action_autoComplitFragment_to_itemAutoComplitFragment"
            app:destination="@id/itemAutoComplitFragment" />
    </fragment>
    <fragment
        android:id="@+id/itemAutoComplitFragment"
        android:name="ru.polyakov.transferme.ItemAutoComplitFragment"
        android:label="fragment_itemautocomplit_list"
        tools:layout="@layout/fragment_itemautocomplit_list" />
</navigation>